--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,31 @@
+amqp==2.6.0
+anyjson==0.3.3
+billiard==3.6.3.0
+celery==4.4.5
 certifi==2020.4.5.2
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.13
+django-celery==3.3.1
+django-celery-beat==2.0.0
+django-timezone-field==4.0
 djangorestframework==3.11.0
 drf-yasg==1.17.1
+future==0.18.2
 idna==2.9
+importlib-metadata==1.6.1
 inflection==0.5.0
 itypes==1.2.0
 Jinja2==2.11.2
+kombu==4.6.10
 MarkupSafe==1.1.1
 packaging==20.4
 pyparsing==2.4.7
+python-crontab==2.5.1
+python-dateutil==2.8.1
 pytz==2020.1
+PyYAML==5.3.1
 requests==2.23.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
@@ -20,3 +33,5 @@ six==1.15.0
 sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.9
+vine==1.3.0
+zipp==3.1.0
